--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>🌐 AgriNexus 전체 기능 대시보드</title>
+  <title>🌐 AgriNexus 전자동 운영 대시보드</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body { font-family: sans-serif; background: #f8fafc; text-align: center; padding: 2rem; }
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>🌐 AgriNexus 운영 대시보드 – 고급 기능 전체 연결</h1>
+  <h1>🌐 AgriNexus 자동화 통합 대시보드</h1>
   <nav>
     <a href="/routes">📂 전체 기능 메뉴</a>
     <a href="/login">🔐 관리자 로그인</a>
@@ -39,7 +39,10 @@
     <a href="/email-report">📬 리포트 이메일 전송</a>
     <a href="/lang-detect">🌐 언어 감지</a>
     <a href="/client-view">🌿 고객 대시보드</a>
-    <a href="/pwa/manifest.json">📱 PWA 설정</a>
+    <a href="/user-role">🔐 사용자 권한 설정</a>
+    <a href="/alert-scheduler">⏰ 알림 스케줄러</a>
+    <a href="/ai-contract-summary">🤖 계약서 AI 요약</a>
+    <a href="/pwa/manifest.json">📱 PWA 설치 설정</a>
   </nav>
 </body>
 </html>
