--- a/index.html
+++ b/index.html
@@ -2,86 +2,163 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus 운영 통합 대시보드</title>
+  <title>AgriNexus Global Smart Platform</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    html, body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8fafc; color: #1f2937; scroll-behavior: smooth; }
-    header { position: sticky; top: 0; background: #1d4ed8; color: white; padding: 1rem; text-align: center; z-index: 999; }
-    section { padding: 4rem 2rem; min-height: 100vh; border-bottom: 1px solid #e5e7eb; text-align: center; }
-    h1, h2 { margin-bottom: 1rem; }
-    h1 { font-size: 2rem; }
-    h2 { font-size: 1.5rem; color: #2563eb; }
-    .menu { display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; max-width: 1000px; margin: auto; }
-    .menu a { background: #2563eb; color: white; padding: 1rem 1.5rem; text-decoration: none; border-radius: 10px; font-size: 1rem; min-width: 240px; }
-    .menu a:hover { background: #1e40af; }
-    .admin-only { display: none; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #eef2ff, #f9fafb);
+      color: #111827;
+    }
+    header {
+      background: #1d4ed8;
+      color: white;
+      padding: 1.5rem;
+      text-align: center;
+      font-size: 1.6rem;
+      font-weight: bold;
+    }
+    .hero {
+      padding: 4rem 2rem;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      color: #1e3a8a;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      color: #374151;
+    }
+    section {
+      padding: 3rem 2rem;
+    }
+    h2 {
+      color: #2563eb;
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+    }
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
+    }
+    .card {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      width: 280px;
+      text-align: center;
+    }
+    .card h3 {
+      font-size: 1.2rem;
+      color: #1f2937;
+    }
+    .card p {
+      font-size: 0.95rem;
+      color: #6b7280;
+      margin: 0.5rem 0 1rem;
+    }
+    .card a {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background: #2563eb;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      color: #9ca3af;
+    }
   </style>
 </head>
 <body>
 
-  <header>🌱 AgriNexus 자동 운영 포털</header>
+  <header>
+    🌿 AgriNexus World | Global SmartFarm & Automation Platform
+  </header>
+
+  <div class="hero">
+    <h1>AI + Contract + Revenue + Global Access</h1>
+    <p>스마트팜, 계약 자동화, 수익 예측, 언어 번역, 고객 대시보드까지<br/>
+       하나로 통합된 글로벌 스마트 자동화 플랫폼입니다.</p>
+  </div>
 
   <section>
-    <h1>🚀 전체 주요 기능</h1>
-    <p>계약/수익/언어/고객/AI까지 모든 기능이 하나로 통합된<br/>스마트팜 글로벌 자동화 플랫폼</p>
-  </section>
-
-  <section>
-    <h2>📊 수익 · 계약 · AI</h2>
-    <div class="menu">
-      <a href="/contract-pdf">📑 계약서 PDF</a>
-      <a href="/revenue-report">💰 수익 계산</a>
-      <a href="/forecast-report">📈 수익 예측</a>
-      <a href="/ai-contract-summary">🤖 계약 요약</a>
+    <h2>📈 주요 자동화 기능</h2>
+    <div class="card-container">
+      <div class="card">
+        <h3>계약서 PDF 자동 생성</h3>
+        <p>계약 내용 입력 → 바로 계약서 PDF 출력</p>
+        <a href="/contract-pdf">바로가기</a>
+      </div>
+      <div class="card">
+        <h3>수익 분석 & 예측</h3>
+        <p>월간·주간 예측 보고서 자동 생성 및 PDF 저장</p>
+        <a href="/forecast-report">수익 리포트</a>
+      </div>
+      <div class="card">
+        <h3>AI 계약 요약</h3>
+        <p>GPT 기반 계약서 문서 요약 자동화</p>
+        <a href="/ai-contract-summary">AI 요약</a>
+      </div>
     </div>
   </section>
 
   <section>
-    <h2>🧠 자동화 · 글로벌</h2>
-    <div class="menu">
-      <a href="/lang-detect">🌐 언어 감지</a>
-      <a href="/ai-translator">🌎 AI 번역기</a>
-      <a href="/email-report">📬 이메일 리포트</a>
-      <a href="/alert-scheduler">⏰ 알림 스케줄</a>
+    <h2>🌍 글로벌 기능 / 고객 기능</h2>
+    <div class="card-container">
+      <div class="card">
+        <h3>다국어 자동 번역</h3>
+        <p>계약·리포트 텍스트 실시간 다국어 번역</p>
+        <a href="/ai-translator">번역기</a>
+      </div>
+      <div class="card">
+        <h3>고객 대시보드</h3>
+        <p>고객 요청, 업로드, 이력 전용 포털</p>
+        <a href="/client-view">대시보드</a>
+      </div>
+      <div class="card">
+        <h3>앱 설치 (PWA)</h3>
+        <p>모바일에서도 바로 설치 가능, 홈화면 추가</p>
+        <a href="/pwa/install.html">설치 안내</a>
+      </div>
     </div>
   </section>
 
   <section>
-    <h2>👥 고객 · 사용자</h2>
-    <div class="menu">
-      <a href="/client-view">🌿 고객 대시보드</a>
-      <a href="/upload">📤 업로드</a>
-      <a href="/user-dashboard">🧾 제출 이력</a>
-      <a href="/report-auto-tier">📬 등급 리포트</a>
+    <h2>📊 사용자 통계 & 관리자</h2>
+    <div class="card-container">
+      <div class="card">
+        <h3>사용자 통계 시각화</h3>
+        <p>일간/주간/국가/시간대별 차트로 확인</p>
+        <a href="/user-stats">통계 보기</a>
+      </div>
+      <div class="card">
+        <h3>CSV + PDF 리포트</h3>
+        <p>자동 보고서 출력 및 관리자 리포트</p>
+        <a href="/pdf-report">PDF 출력</a>
+      </div>
+      <div class="card">
+        <h3>관리자 리포트 탭</h3>
+        <p>매출/사용량/계약 수 통계 그래프 포함</p>
+        <a href="/admin-report">관리자 리포트</a>
+      </div>
     </div>
   </section>
 
-  <section>
-    <h2>📈 사용자 분석</h2>
-    <div class="menu">
-      <a href="/user-stats">📊 이용 통계 분석</a>
-    </div>
-  </section>
-
-  <section class="admin-only">
-    <h2>🔐 관리자</h2>
-    <div class="menu">
-      <a href="/login">🔐 로그인</a>
-      <a href="/admin-panel">📊 대시보드</a>
-      <a href="/admin-report">📋 리포트</a>
-      <a href="/user-role">🛠 권한 설정</a>
-    </div>
-  </section>
-
-  <section>
-    <h2>📂 기타</h2>
-    <div class="menu">
-      <a href="/data-visualization">📈 통계 차트</a>
-      <a href="/csv-download">📥 CSV 출력</a>
-      <a href="/pdf-report">📄 PDF 변환</a>
-      <a href="/pwa/install.html">📱 앱 설치</a>
-    </div>
-  </section>
+  <footer>
+    © 2025 AgriNexus World – All rights reserved.
+  </footer>
 
 </body>
 </html>
