--- a/index.html
+++ b/index.html
@@ -2,163 +2,65 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus Global Smart Platform</title>
+  <title>📌 기능 흐름형 UX 인터페이스</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #eef2ff, #f9fafb);
-      color: #111827;
-    }
-    header {
-      background: #1d4ed8;
-      color: white;
-      padding: 1.5rem;
-      text-align: center;
-      font-size: 1.6rem;
-      font-weight: bold;
-    }
-    .hero {
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      color: #1e3a8a;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.1rem;
-      color: #374151;
-    }
-    section {
-      padding: 3rem 2rem;
-    }
-    h2 {
-      color: #2563eb;
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-    }
-    .card-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-    }
-    .card {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      width: 280px;
-      text-align: center;
-    }
-    .card h3 {
-      font-size: 1.2rem;
-      color: #1f2937;
-    }
-    .card p {
-      font-size: 0.95rem;
-      color: #6b7280;
-      margin: 0.5rem 0 1rem;
-    }
-    .card a {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #2563eb;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-    }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #9ca3af;
-    }
+    body { font-family: 'Segoe UI', sans-serif; background: #f9fafb; color: #1f2937; padding: 2rem; text-align: center; }
+    h1 { color: #2563eb; margin-bottom: 2rem; }
+    section { margin-bottom: 2rem; max-width: 700px; margin: 2rem auto; background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); }
+    textarea, input { width: 90%; max-width: 500px; padding: 0.6rem; margin: 0.5rem 0; }
+    button { padding: 0.6rem 1rem; margin-top: 1rem; background: #2563eb; color: white; border: none; border-radius: 8px; cursor: pointer; }
+    .hidden { display: none; }
+    #result { font-weight: bold; color: #10b981; margin-top: 1rem; }
   </style>
 </head>
 <body>
-
-  <header>
-    🌿 AgriNexus World | Global SmartFarm & Automation Platform
-  </header>
-
-  <div class="hero">
-    <h1>AI + Contract + Revenue + Global Access</h1>
-    <p>스마트팜, 계약 자동화, 수익 예측, 언어 번역, 고객 대시보드까지<br/>
-       하나로 통합된 글로벌 스마트 자동화 플랫폼입니다.</p>
-  </div>
+  <h1>🧠 전자동 기능 흐름형 UX</h1>
 
   <section>
-    <h2>📈 주요 자동화 기능</h2>
-    <div class="card-container">
-      <div class="card">
-        <h3>계약서 PDF 자동 생성</h3>
-        <p>계약 내용 입력 → 바로 계약서 PDF 출력</p>
-        <a href="/contract-pdf">바로가기</a>
-      </div>
-      <div class="card">
-        <h3>수익 분석 & 예측</h3>
-        <p>월간·주간 예측 보고서 자동 생성 및 PDF 저장</p>
-        <a href="/forecast-report">수익 리포트</a>
-      </div>
-      <div class="card">
-        <h3>AI 계약 요약</h3>
-        <p>GPT 기반 계약서 문서 요약 자동화</p>
-        <a href="/ai-contract-summary">AI 요약</a>
-      </div>
-    </div>
+    <h2>① 기능 소개</h2>
+    <p>이 기능은 사용자가 계약 목적을 입력하면,<br/>자동으로 AI 기반 요약 + 수익 예측 + PDF 생성까지 연결되는 흐름형 UX입니다.</p>
+    <button onclick="nextStep('step2')">계속 진행</button>
   </section>
 
-  <section>
-    <h2>🌍 글로벌 기능 / 고객 기능</h2>
-    <div class="card-container">
-      <div class="card">
-        <h3>다국어 자동 번역</h3>
-        <p>계약·리포트 텍스트 실시간 다국어 번역</p>
-        <a href="/ai-translator">번역기</a>
-      </div>
-      <div class="card">
-        <h3>고객 대시보드</h3>
-        <p>고객 요청, 업로드, 이력 전용 포털</p>
-        <a href="/client-view">대시보드</a>
-      </div>
-      <div class="card">
-        <h3>앱 설치 (PWA)</h3>
-        <p>모바일에서도 바로 설치 가능, 홈화면 추가</p>
-        <a href="/pwa/install.html">설치 안내</a>
-      </div>
-    </div>
+  <section id="step2" class="hidden">
+    <h2>② 어떤 목적의 계약인가요?</h2>
+    <input id="purpose" placeholder="예: 스마트팜 설치 계약 / 수출 공급 계약" />
+    <button onclick="nextStep('step3')">입력 완료</button>
   </section>
 
-  <section>
-    <h2>📊 사용자 통계 & 관리자</h2>
-    <div class="card-container">
-      <div class="card">
-        <h3>사용자 통계 시각화</h3>
-        <p>일간/주간/국가/시간대별 차트로 확인</p>
-        <a href="/user-stats">통계 보기</a>
-      </div>
-      <div class="card">
-        <h3>CSV + PDF 리포트</h3>
-        <p>자동 보고서 출력 및 관리자 리포트</p>
-        <a href="/pdf-report">PDF 출력</a>
-      </div>
-      <div class="card">
-        <h3>관리자 리포트 탭</h3>
-        <p>매출/사용량/계약 수 통계 그래프 포함</p>
-        <a href="/admin-report">관리자 리포트</a>
-      </div>
-    </div>
+  <section id="step3" class="hidden">
+    <h2>③ 예상 수익은 얼마인가요?</h2>
+    <input id="revenue" placeholder="예: 3,000,000 (₩)" />
+    <button onclick="generate()">결과 생성</button>
   </section>
 
-  <footer>
-    © 2025 AgriNexus World – All rights reserved.
-  </footer>
+  <section id="step4" class="hidden">
+    <h2>④ 분석 결과</h2>
+    <p id="result">로딩 중...</p>
+    <button onclick="downloadPDF()">📄 PDF 저장</button>
+  </section>
 
+  <script>
+    function nextStep(id) {
+      document.getElementById(id).classList.remove("hidden");
+    }
+
+    function generate() {
+      const purpose = document.getElementById("purpose").value;
+      const revenue = document.getElementById("revenue").value;
+      const summary = `📝 계약 요약: ${purpose}\n💰 예상 수익: ₩${revenue}\n📌 분석 완료: 스마트팜 ROI 145% / 계약 진행 추천`;
+      document.getElementById("result").innerText = summary;
+      document.getElementById("step4").classList.remove("hidden");
+    }
+
+    function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.text(document.getElementById("result").innerText, 10, 20);
+      doc.save("agrinexus_analysis.pdf");
+    }
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </body>
 </html>
