--- a/index.html
+++ b/index.html
@@ -1,62 +1,46 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>🧠 실시간 연결형 질문 · 분석 · 실행 시스템</title>
+  <meta charset="UTF-8">
+  <title>🔐 회원가입 / 이용안내</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background: #f8fafc; padding: 2rem; text-align: center; color: #1f2937; }
-    h1 { color: #1e40af; margin-bottom: 2rem; }
-    textarea, input { width: 90%; max-width: 600px; padding: 0.75rem; margin: 0.5rem 0; }
-    button {
-      padding: 0.75rem 1.5rem;
-      background: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 1rem;
-    }
-    .card {
-      background: white;
-      padding: 1.5rem;
-      margin-top: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .output { margin-top: 1rem; font-weight: bold; color: #10b981; white-space: pre-wrap; }
+    body { font-family: sans-serif; background: #f8fafc; padding: 2rem; color: #1f2937; }
+    h1 { color: #1d4ed8; }
+    section { max-width: 800px; margin: auto; margin-bottom: 2rem; background: white; padding: 2rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); }
+    ul { text-align: left; line-height: 1.6; }
   </style>
 </head>
 <body>
-  <h1>🧠 무엇이든 질문하세요</h1>
+  <h1>🔐 회원가입 · 이용안내</h1>
 
-  <div class="card">
-    <p>질문을 입력하면 → AI가 분석하고 → 필요한 기능을 자동으로 연결해드립니다.</p>
-    <textarea id="question" rows="4" placeholder="예: 스마트팜 수익 예측이 필요해요."></textarea>
-    <button onclick="analyze()">질문 실행</button>
-    <div class="output" id="answer"></div>
-  </div>
+  <section>
+    <h2>📌 회원가입</h2>
+    <p>이메일과 간단한 정보만 입력하면 누구나 가입할 수 있습니다.<br/>가입 후 모든 서비스 기능에 접근 가능합니다.</p>
+  </section>
 
-<script>
-function analyze() {
-  const q = document.getElementById("question").value.toLowerCase();
-  let response = "❗ 질문 내용을 확인하세요.";
-  if (q.includes("수익") || q.includes("예측")) {
-    response = "🔗 '수익 계산기' 기능과 '수익 예측 리포트'를 추천합니다.\n👉 [수익 계산기로 이동](/revenue-report)\n👉 [예측 리포트 보기](/forecast-report)";
-  } else if (q.includes("계약") || q.includes("요약")) {
-    response = "🔗 '계약서 생성기'와 'AI 계약 요약' 기능을 연결합니다.\n👉 [계약서 PDF](/contract-pdf)\n👉 [AI 요약 실행](/ai-contract-summary)";
-  } else if (q.includes("고객") || q.includes("이력")) {
-    response = "🔗 '고객 대시보드'와 '사용자 통계 분석'이 도움이 될 수 있어요.\n👉 [고객 뷰](/client-view)\n👉 [이력 분석](/user-stats)";
-  } else if (q.includes("언어") || q.includes("번역")) {
-    response = "🔗 '언어 감지'와 'AI 번역기'를 추천합니다.\n👉 [언어 감지 실행](/lang-detect)\n👉 [AI 번역기](/ai-translator)";
-  } else {
-    response = "🧠 질문을 분석 중입니다...\n더 구체적으로 질문해 주세요! 예: 계약서 요약 보여줘.";
-  }
-  document.getElementById("answer").innerText = response;
-}
-</script>
+  <section>
+    <h2>🧾 회원 탈퇴</h2>
+    <p>관리자에게 이메일 요청 시 바로 탈퇴 처리됩니다.<br/>데이터도 함께 완전 삭제됩니다.</p>
+  </section>
+
+  <section>
+    <h2>💳 결제 및 이용안내</h2>
+    <ul>
+      <li>무료 체험: 7일간 전기능 무료 이용 가능</li>
+      <li>유료 이용: 기능 단위 또는 전체 통합 패키지 이용 선택 가능</li>
+      <li>결제 방식: 계좌이체만 가능 (카드 X)</li>
+      <li>계좌 정보: <strong>카카오뱅크 3333-17-4744532 (정재윤)</strong></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>❓ 자주 묻는 질문</h2>
+    <ul>
+      <li><strong>Q.</strong> 기능은 어떤 기준으로 요금이 달라지나요?<br/><strong>A.</strong> 분석, 계약, 수익 리포트 기능은 고급형, 나머지는 기본형으로 분류됩니다.</li>
+      <li><strong>Q.</strong> 계약서 자동화는 법적 효력이 있나요?<br/><strong>A.</strong> 출력된 PDF는 서명 후 활용 가능하며, 법률 자문 기능은 곧 추가 예정입니다.</li>
+      <li><strong>Q.</strong> AI 번역과 요약 정확도는 어느 정도인가요?<br/><strong>A.</strong> GPT-4 API 기반으로 작동하며 고급 비즈니스 수준 대응이 가능합니다.</li>
+    </ul>
+  </section>
 </body>
 </html>
