--- a/index.html
+++ b/index.html
@@ -2,45 +2,109 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>🔐 회원가입 / 이용안내</title>
+  <title>AgriNexus 통합 운영 포털</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    body { font-family: sans-serif; background: #f8fafc; padding: 2rem; color: #1f2937; }
-    h1 { color: #1d4ed8; }
-    section { max-width: 800px; margin: auto; margin-bottom: 2rem; background: white; padding: 2rem; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); }
-    ul { text-align: left; line-height: 1.6; }
+    * { box-sizing: border-box; }
+    body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #f3f4f6; color: #1f2937; }
+    header { background: #1d4ed8; color: white; padding: 1.2rem; text-align: center; font-size: 1.4rem; }
+    .container { display: flex; flex-direction: row; min-height: 100vh; }
+    .menu { width: 250px; background: white; padding: 1rem; border-right: 1px solid #e5e7eb; }
+    .menu h2 { font-size: 1.1rem; margin-bottom: 0.5rem; color: #2563eb; }
+    .menu ul { list-style: none; padding: 0; }
+    .menu li { margin: 0.3rem 0; }
+    .menu a { color: #1e40af; text-decoration: none; }
+    .menu a:hover { text-decoration: underline; }
+
+    .main { flex: 1; padding: 2rem; overflow-y: auto; }
+    .section { margin-bottom: 2rem; background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.03); }
+
+    .chatbox {
+      background: #f1f5f9;
+      padding: 1rem;
+      border: 1px solid #e5e7eb;
+      border-radius: 10px;
+      margin-top: 1rem;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 0.6rem;
+      margin-top: 0.5rem;
+      font-size: 1rem;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.6rem 1rem;
+      background: #2563eb;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <h1>🔐 회원가입 · 이용안내</h1>
 
-  <section>
-    <h2>📌 회원가입</h2>
-    <p>이메일과 간단한 정보만 입력하면 누구나 가입할 수 있습니다.<br/>가입 후 모든 서비스 기능에 접근 가능합니다.</p>
-  </section>
+<header>AgriNexus Global Platform | 전자동 흐름 포털</header>
 
-  <section>
-    <h2>🧾 회원 탈퇴</h2>
-    <p>관리자에게 이메일 요청 시 바로 탈퇴 처리됩니다.<br/>데이터도 함께 완전 삭제됩니다.</p>
-  </section>
-
-  <section>
-    <h2>💳 결제 및 이용안내</h2>
+<div class="container">
+  <nav class="menu">
+    <h2>📌 핵심 메뉴</h2>
     <ul>
-      <li>무료 체험: 7일간 전기능 무료 이용 가능</li>
-      <li>유료 이용: 기능 단위 또는 전체 통합 패키지 이용 선택 가능</li>
-      <li>결제 방식: 계좌이체만 가능 (카드 X)</li>
-      <li>계좌 정보: <strong>카카오뱅크 3333-17-4744532 (정재윤)</strong></li>
+      <li><a href="#guide">회원가입·이용안내</a></li>
+      <li><a href="#recommend">실시간 기능 추천</a></li>
+      <li><a href="#chat">질문/챗봇 응답</a></li>
+      <li><a href="/dashboard">기능 전체 대시보드 →</a></li>
     </ul>
-  </section>
+  </nav>
 
-  <section>
-    <h2>❓ 자주 묻는 질문</h2>
-    <ul>
-      <li><strong>Q.</strong> 기능은 어떤 기준으로 요금이 달라지나요?<br/><strong>A.</strong> 분석, 계약, 수익 리포트 기능은 고급형, 나머지는 기본형으로 분류됩니다.</li>
-      <li><strong>Q.</strong> 계약서 자동화는 법적 효력이 있나요?<br/><strong>A.</strong> 출력된 PDF는 서명 후 활용 가능하며, 법률 자문 기능은 곧 추가 예정입니다.</li>
-      <li><strong>Q.</strong> AI 번역과 요약 정확도는 어느 정도인가요?<br/><strong>A.</strong> GPT-4 API 기반으로 작동하며 고급 비즈니스 수준 대응이 가능합니다.</li>
-    </ul>
-  </section>
+  <main class="main">
+    <section id="guide" class="section">
+      <h2>🔐 회원가입 / 결제 안내</h2>
+      <p><strong>무료 이용:</strong> 7일 / <strong>결제 계좌:</strong> 카카오뱅크 3333-17-4744532 (정재윤)</p>
+      <p><strong>탈퇴:</strong> 관리자 이메일 요청 즉시 처리</p>
+      <p><strong>기능별 요금 안내:</strong> 계약/AI/수익 리포트는 유료, 나머지 기본형 무료</p>
+    </section>
+
+    <section id="recommend" class="section">
+      <h2>📲 실시간 기능 추천 시스템</h2>
+      <input id="reco" placeholder="예: 계약서 작성, 수익 예측, 번역 등 입력해보세요" />
+      <button onclick="recommend()">추천 실행</button>
+      <div class="chatbox" id="reco-result">👉 관련 기능이 여기에 나타납니다.</div>
+    </section>
+
+    <section id="chat" class="section">
+      <h2>💬 질문 기반 챗 응답 시스템</h2>
+      <textarea id="ask" rows="4" placeholder="예: 고객이 올린 파일은 어디서 확인하나요?"></textarea>
+      <button onclick="chat()">답변 받기</button>
+      <div class="chatbox" id="chat-result">🤖 여기 답변이 나옵니다.</div>
+    </section>
+  </main>
+</div>
+
+<script>
+function recommend() {
+  const text = document.getElementById("reco").value.toLowerCase();
+  let res = "❗ 더 구체적으로 입력해주세요.";
+  if (text.includes("계약")) res = "📑 추천 기능: 계약서 생성기 (/contract-pdf)";
+  else if (text.includes("수익") || text.includes("리포트")) res = "💰 추천 기능: 수익 계산기 (/revenue-report)";
+  else if (text.includes("ai") || text.includes("요약")) res = "🤖 추천 기능: AI 요약 분석 (/ai-contract-summary)";
+  else if (text.includes("번역") || text.includes("언어")) res = "🌐 추천 기능: 언어 감지 + 번역기 (/ai-translator)";
+  else if (text.includes("고객")) res = "🌿 추천 기능: 고객 뷰 (/client-view)";
+  document.getElementById("reco-result").innerText = res;
+}
+
+function chat() {
+  const input = document.getElementById("ask").value.toLowerCase();
+  let reply = "❓ 질문을 다시 입력해주세요.";
+  if (input.includes("파일")) reply = "📤 업로드 파일은 관리자 대시보드에서 확인 가능합니다.";
+  else if (input.includes("언제")) reply = "⏰ 대부분 기능은 24시간 자동 응답 및 다운로드 가능합니다.";
+  else if (input.includes("결제")) reply = "💳 계좌이체만 가능하며, 결제 후 바로 사용됩니다.";
+  else reply = "🤖 답변 생성 중... 더 구체적인 질문을 부탁드려요!";
+  document.getElementById("chat-result").innerText = reply;
+}
+</script>
+
 </body>
 </html>
