--- a/index.html
+++ b/index.html
@@ -1,47 +1,78 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus 자동 통합 플랫폼</title>
+  <meta charset="UTF-8">
+  <title>AgriNexus 실시간 통합 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
-  <h1>🌿 AgriNexus 자동 통합 시스템</h1>
-  <p>기능이 추가될 때마다 이 메인 포털에 자동 반영됩니다.</p>
+  <h1>🌱 AgriNexus World – 살아있는 자동 플랫폼</h1>
+  <p>지금 이 시스템은 계속 진화하며, 사용자의 질문에 반응하고 스스로 연결하며 업데이트됩니다.</p>
 </header>
 
 <main>
   <section>
-    <h2>📥 주요 기능 바로가기</h2>
+    <h2>📍 핵심 기능 흐름</h2>
     <div class="menu">
-      <a href="/dashboard">대시보드</a>
+      <a href="/join">회원가입</a>
+      <a href="/dashboard">기능 전체</a>
       <a href="/portal">고객포털</a>
-      <a href="/contract-pdf">계약서 생성</a>
-      <a href="/revenue-report">수익 계산기</a>
+      <a href="/contract-pdf">계약 생성</a>
+      <a href="/revenue-report">수익 계산</a>
       <a href="/forecast-report">수익 예측</a>
-      <a href="/ai-translator">다국어 번역</a>
-      <a href="/client-view">고객 대시보드</a>
-      <a href="/landing.html">랜딩 페이지</a>
     </div>
   </section>
 
   <section>
-    <h2>🧠 최근 업로드된 기능 자동 반영</h2>
-    <p>업로드 후 자동 업데이트: <strong>/connect</strong>, <strong>/chat-flow</strong>, <strong>/user-stats</strong>, <strong>/smart-recommend</strong></p>
+    <h2>📡 실시간 응답형 시스템</h2>
     <div class="menu">
-      <a href="/connect">질문-기능 연결</a>
-      <a href="/smart-recommend">기능 추천</a>
-      <a href="/user-stats">이용자 통계</a>
-      <a href="/chat-flow">챗봇 인터랙션</a>
+      <a href="/connect">실시간 질문 연결</a>
+      <a href="/chat-flow">챗봇 인터페이스</a>
+      <a href="/smart-recommend">기능 추천기</a>
     </div>
+  </section>
+
+  <section>
+    <h2>📊 분석 · 번역 · AI</h2>
+    <div class="menu">
+      <a href="/ai-contract-summary">AI 계약 요약</a>
+      <a href="/ai-translator">다국어 번역</a>
+      <a href="/user-stats">사용자 통계 분석</a>
+    </div>
+  </section>
+
+  <section>
+    <h2>📤 고객 · 업로드 · 리포트</h2>
+    <div class="menu">
+      <a href="/client-view">고객 보기</a>
+      <a href="/upload">파일 제출</a>
+      <a href="/email-report">이메일 보고서</a>
+      <a href="/report-auto-tier">고객 등급</a>
+    </div>
+  </section>
+
+  <section>
+    <h2>🌐 기타 · 연결 · 설치</h2>
+    <div class="menu">
+      <a href="/lang-detect">언어 감지</a>
+      <a href="/pwa/install.html">앱 설치</a>
+      <a href="/landing.html">랜딩</a>
+      <a href="/generate">자동 생성 페이지</a>
+    </div>
+  </section>
+
+  <section>
+    <h2>🧭 지금도 확장 중인 기능</h2>
+    <p>시스템은 질문/행동에 따라 새로운 메뉴를 생성하며 계속 진화 중입니다. <br/>
+    더 많은 기능은 접속자 활동에 따라 자동으로 이곳에 반영됩니다.</p>
   </section>
 </main>
 
 <footer>
-  ⓒ 2025 AgriNexus World. 모든 기능은 실시간 자동 반영됩니다.
+  ⓒ 2025 AgriNexus World — 전자동화 시스템은 지금도 성장 중입니다.
 </footer>
 
 </body>
